# wasm-audioworklet-example

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs  soundchip.rs
npm_scripts/: build.sh  serve.sh
src/: aw.js  window.js
www/: index.html
