[package]
name = "soundchip"
version = "0.1.0"
authors = ["piutranq <piutranq@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.11.1"
lazy_static = "1.4.0"
wee_alloc = "0.4.5"